# bit-vec

./: Cargo.toml  RELEASES.md
.github/workflows/: rust.yml
benches/: bench.rs
fuzz/: Cargo.toml  README.md  get_crashes.rb  make_in.rb
fuzz/fuzz_targets/: bit_ops.rs  bitvec_ops.rs
fuzz/in/: serde  serde2
fuzz/src/: main.rs
matrix/: Cargo.toml  README.md
matrix/src/: lib.rs  matrix.rs  row.rs  submatrix.rs  util.rs
matrix/tests/: test_submatrix.rs  transitive_closure.rs
set/: Cargo.toml  README.md  RELEASES.md
set/src/: iter.rs  lib.rs  set.rs  util.rs
set/tests/: serialization.rs
vec/: Cargo.toml  README.md
vec/benches/: bench.rs
vec/src/: lib.rs  util.rs
