[workspace]

members = [
    "vec",
    "set",
    "matrix",
    "fuzz",
]

default-members = [
    "vec",
    "set",
    "matrix",
]

resolver = "2"

# add debug info for profiling?
[profile.release]
debug = false

[workspace.dependencies]

[workspace.package]
# shared version of all public crates in the workspace
version = "0.10.1"
rust-version = "1.85.0"
