[package]
name = "bit-fuzz"
version = "0.1.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>", "Peter Blackson <pioczarn@gmail.com>"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[features]
default = ["afl"]
afl_fuzz = ["afl"]
honggfuzz_fuzz = ["honggfuzz"]
# hack to make vscode happy
serde = []
miniserde = []
borsh = []

[dependencies]
honggfuzz = { version = "0.5", optional = true }
afl = { version = "0.17", optional = true }
bit-vec = { path = "../vec/", features = ["serde", "borsh", "miniserde"] }
bit-set = { path = "../set/" }
bit-matrix = { path = "../matrix/" }
# smallvec = "1.15"
serde = "1.0"
serde_json = "1.0"
