[package]
name = "bit-matrix"
version.workspace = true
rust-version.workspace = true
authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
description = "Library for bit matrices and vectors."
keywords = ["container", "bit", "bitfield", "algebra"]
documentation = "https://docs.rs/bit-matrix/latest/bit_matrix/"
repository = "https://github.com/pczarn/bit-matrix"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
name = "bit_matrix"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
miniserde = { version = "0.1", optional = true }
borsh = { version = "1.6.0", optional = true }

[dependencies.bit-vec]
path = "../vec/"
version = "0.10.0"
default-features = false

[dev-dependencies]
serde_json = "1.0"


[features]
default = ["std"]
std = ["bit-vec/std", "serde?/std"]

serde = ["dep:serde", "bit-vec/serde"]
miniserde = ["dep:miniserde", "bit-vec/miniserde"]
borsh = ["dep:borsh", "bit-vec/borsh"]
