[package]
name = "bit-matrix"
version.workspace = true
rust-version.workspace = true
authors = [ "Piotr Czarnecki <pioczarn@gmail.com>" ]
license = "Apache-2.0 OR MIT"
description = "Library for bit matrices and vectors."
repository = "https://github.com/contain-rs/bit-vec"
homepage = "https://github.com/contain-rs/bit-vec"
documentation = "https://docs.rs/bit-matrix/latest/bit-matrix/"
keywords = ["container", "bit", "bitfield", "algebra"]
readme = "README.md"
edition = "2021"

[lib]
name = "bit_matrix"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
miniserde = { version = "0.1", optional = true }
borsh = { version = "1.7.0", optional = true }

[dependencies.bit-vec]
path = "../vec/"
version = "0.10.1"
default-features = false

[dev-dependencies]
serde_json = "1.0"


[features]
default = ["std"]
std = ["bit-vec/std", "serde?/std"]

serde = ["dep:serde", "bit-vec/serde"]
miniserde = ["dep:miniserde", "bit-vec/miniserde"]
borsh = ["dep:borsh", "bit-vec/borsh"]
