[package]
name = "bit-set"
version.workspace = true
rust-version.workspace = true
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A set of bits"
repository = "https://github.com/contain-rs/bit-set"
homepage = "https://github.com/contain-rs/bit-set"
documentation = "https://docs.rs/bit-set/"
keywords = ["data-structures", "bitset"]
readme = "README.md"
edition = "2021"

[dependencies]
borsh = { version = "1.5", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
miniserde = { version = "0.1", optional = true }

[dependencies.bit-vec]
path = "../vec/"
default-features = false

[dev-dependencies]
rand = "0.10"
serde_json = "1.0"

[features]
default = ["std"]
std = ["bit-vec/std"]

borsh = ["dep:borsh", "bit-vec/borsh"]
serde = ["dep:serde", "bit-vec/serde"]
miniserde = ["dep:miniserde", "bit-vec/miniserde"]

serde_std = ["std", "serde/std"]
serde_no_std = ["serde/alloc"]
borsh_std = ["borsh/std"]

[package.metadata.docs.rs]
features = ["borsh", "serde", "miniserde"]
