[package]
name = "bit-set"
version = "0.11.0"
rust-version.workspace = true
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A set of bits"
repository = "https://github.com/contain-rs/bit-vec"
homepage = "https://github.com/contain-rs/bit-vec"
documentation = "https://docs.rs/bit-set/"
keywords = ["data-structures", "bitset"]
readme = "README.md"
edition = "2021"

[dependencies]
borsh = { version = "1.7.0", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
miniserde = { version = "0.1", optional = true }

[dependencies.bit-vec]
path = "../vec/"
version = "0.10.0"
default-features = false

[dev-dependencies]
rand = "0.10"
serde_json = "1.0"

[features]
default = ["std"]
std = ["bit-vec/std"]

borsh = ["dep:borsh", "bit-vec/borsh"]
serde = ["dep:serde", "bit-vec/serde"]
miniserde = ["dep:miniserde", "bit-vec/miniserde"]

[package.metadata.docs.rs]
features = ["borsh", "serde", "miniserde"]
